# DiscordBot-Malbaro

./: LICENSE  README.md  pyproject.toml  run.py
bot/: __init__.py  main.py
bot/cogs/: main.py
bot/cogs/general/: events.py  help.py  listeners.py  user_info.py
bot/cogs/user/: example.py
bot/database/: main.py
bot/database/methods/: __init__.py  get_user_about.py  get_user_id.py  get_user_info.py  set_user_about.py  set_user_info.py
bot/database/models/: user.py
bot/misc/: config.py  env.py  logs.py  types.py  utils.py
bot/misc/embeds/: parser.py
bot/misc/embeds/source/: help.json  you_are_not_admin.json
bot/misc/views/: private_voice_controller.py
bot/utils/: logs.py
